<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="title_activity_ajout_defi">AjoutDefiActivity</string>
    <string name="title_activity_ajout_defi_core">AjoutDefiCore</string>
    <string name="title_activity_ajout_defi_final">AjoutDefiFinalActivity</string>
    <string name="title_activity_ajout_defi_gpsactivity">AjoutDefiGPSACtivity</string>
    <string name="title_activity_ajout_defi_gps">AjoutDefiGPSActivity</string>
    <string name="title_activity_ajout_defi_qrcode">AjoutDefiQRCodeActivity</string>
    <string name="title_activity_ajout_defi_quizz">AjoutDefiQuizzActivity</string>
    <string name="title_activity_profil">ProfilActivity</string>
    <string name="title_activity_valider_defi">ValiderDefiActivity</string>
    <string name="app_name">PolyDefisv4</string>
    <string name="action_settings">Setting</string>
    <string name="liste_des_defis_realises">Liste des défis réalisés</string>
    <string name="liste_des_defis_a_realiser">Liste des défis à réaliser</string>
    <string name="profil">Profil</string>
    <string name="classement_des_3a">Classement des 3A</string>
    <string name="classement_des_4a">Classement des 4A</string>
    <string name="accueil">Accueil</string>
    <string name="proposer_defi">Proposer un défi</string>
    <string name="administration">Administration</string>
    <string name="quitter">Quitter</string>
    <string name="valider_proposition_defis">Proposition de défis à accepter</string>
    <string name="valider_defis_realise">Défis réalisés à valider</string>
    <string name="ajout_respo">Ajouter un responsable de promo</string>
    <string name="parrainage">Parrainage</string>
    <string name="connexion_troisieme_annee">Connexion en tant que 3A</string>
    <string name="connexion_quatrieme_annee">Connexion en tant que 4A</string>
    <string name="connexion_responsable">Connexion en tant que respo</string>
    <string name="refuser">Refuser</string>
    <string name="accepter">Accepter</string>
    <string name="demande_Parrainage">Demander le parrainage</string>
    <string name="connexion">Se connecter</string>

    <string-array name="menu3A">
        <item>@string/liste_des_defis_realises</item>
        <item>@string/liste_des_defis_a_realiser</item>
        <item>@string/profil</item>
        <item>@string/classement_des_3a</item>
        <item>@string/classement_des_4a</item>
    </string-array>
    <string-array name="menu4A">
        <item>@string/liste_des_defis_realises</item>
        <item>@string/proposer_defi</item>
        <item>@string/profil</item>
        <item>@string/classement_des_3a</item>
        <item>@string/classement_des_4a</item>
    </string-array>
    <string-array name="menu4AAdmin">
        <item>@string/liste_des_defis_realises</item>
        <item>@string/proposer_defi</item>
        <item>@string/profil</item>
        <item>@string/classement_des_3a</item>
        <item>@string/classement_des_4a</item>
        <item>@string/valider_proposition_defis</item>
        <item>@string/valider_defis_realise</item>
        <item>@string/ajout_respo</item>
    </string-array>
    <string-array name="menuLateral3A">
        <item>@string/accueil</item>
        <item>@string/liste_des_defis_realises</item>
        <item>@string/liste_des_defis_a_realiser</item>
        <item>@string/profil</item>
        <item>@string/classement_des_3a</item>
        <item>@string/classement_des_4a</item>
        <item>@string/quitter</item>
    </string-array>
    <string-array name="menuLateral4A">
        <item>@string/accueil</item>
        <item>@string/liste_des_defis_realises</item>
        <item>@string/proposer_defi</item>
        <item>@string/profil</item>
        <item>@string/classement_des_3a</item>
        <item>@string/classement_des_4a</item>
        <item>@string/quitter</item>
    </string-array>
    <string-array name="menuLateral4AAdmin">
        <item>@string/accueil</item>
        <item>@string/liste_des_defis_realises</item>
        <item>@string/proposer_defi</item>
        <item>@string/profil</item>
        <item>@string/classement_des_3a</item>
        <item>@string/classement_des_4a</item>
        <item>@string/valider_proposition_defis</item>
        <item>@string/valider_defis_realise</item>
        <item>@string/ajout_respo</item>
        <item>@string/quitter</item>
    </string-array>

    <string name="titreClassementTotal">Total</string>
    <string name="titreClassementINFO">INFO</string>
    <string name="titreClassementETN">ETN</string>
    <string name="titreClassementTE">TE</string>
    <string name="titreClassementMAT">MAT</string>
    <string name="title_activity_activity_test_martin">ActivityTestMartin</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_activity_test">ActivityTest</string>
    <string name="photo">Photo</string>
    <string name="geo">Geolocalisation</string>
    <string name="quizz">Quizz</string>
    <string name="qrcode">QRcode</string>
    <string name="retour">Retour</string>
    <string name="prendrephoto">Prendre Photo</string>
    <string name="scan">Scan</string>
    <string name="envoyerqrcode">Prendre QRcode</string>
    <string name="envoyerpositiongeo">Envoyer la position actuelle</string>
    <string name="envoyerrep">Question suivante</string>
    <string name="afficherdefi">Afficher un Defi</string>
</resources>