<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
	android:padding="20dp"
    android:orientation="vertical" >

    <Button
        android:id="@+id/bouton_3_A"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/connexion_troisieme_annee" 
        android:background="@drawable/bouton_application"/>

    <Button
        android:id="@+id/bouton_4_A"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/connexion_quatrieme_annee" 
        android:background="@drawable/bouton_application"/>

    <Button
        android:id="@+id/bouton_respo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/connexion_responsable"
        android:background="@drawable/bouton_application"/>
</LinearLayout>