<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/boutonValiderPropositionDefis"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/valider_proposition_defis"
        android:background="@drawable/bouton_application"/>

    <Button
        android:id="@+id/boutonValiderDefisRealise"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/valider_defis_realise" 
        android:background="@drawable/bouton_application"/>

    <Button
        android:id="@+id/boutonAjoutRespo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/ajout_respo"
        android:background="@drawable/bouton_application"/>
</LinearLayout>